# Momiji

./: .gitignore  README.md
app/Momiji/Momiji/: ContentView.swift  Item.swift  LibraryStore.swift  LibraryView.swift  MomijiApp.swift  ReaderCore.swift  ReaderHost.swift  ReaderView.swift  Works.swift  momiji_core.swift  momiji_coreFFI.h  momiji_coreFFI.modulemap
app/Momiji/Momiji.xcodeproj/: project.pbxproj
app/Momiji/Momiji.xcodeproj/project.xcworkspace/xcuserdata/lennartk.xcuserdatad/: UserInterfaceState.xcuserstate
app/Momiji/Momiji.xcodeproj/xcshareddata/xcschemes/: Momiji.xcscheme
app/Momiji/Momiji.xcodeproj/xcuserdata/lennartk.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Momiji/MomijiTests/: MomijiTests.swift  ReaderCoreTests.swift
app/Momiji/MomijiUITests/: MomijiUITests.swift  MomijiUITestsLaunchTests.swift
rustcore/: Cargo.toml  build.rs
rustcore/src/: lib.rs  momiji_core.udl  sha.rs
scripts/: build_rustcore.sh
