[package]
name = "momiji_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
uniffi = "0.29.4"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

